--- a/main.html
+++ b/main.html
@@ -8,6 +8,36 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	  <h1>Paris</h1>
+
+  <!-- Line break -->
+  <br>
+
+  <!-- Paragraph overview -->
+  <p>
+    Paris, the capital of France, is known as the <em>City of Light</em> and is one of the most visited destinations in the world. 
+    It offers a perfect mix of <strong>history</strong>, <em>art</em>, <strong>fashion</strong>, and <em>cuisine</em>.
+  </p>
+
+  <!-- Ordered List: Top 5 attractions -->
+  <h2>Top 5 Attractions</h2>
+  <ol>
+    <li><strong>Eiffel Tower</strong> – The most iconic landmark of Paris.</li>
+    <li><em>Louvre Museum</em> – Home to world-famous artworks like the Mona Lisa.</li>
+    <li><strong>Notre-Dame Cathedral</strong> – A masterpiece of Gothic architecture.</li>
+    <li><em>Seine River Cruise</em> – Offers a romantic and scenic view of the city.</li>
+    <li><strong>Champs-Élysées</strong> – A bustling avenue for shopping and culture.</li>
+  </ol>
+
+  <!-- Unordered List: Must-try foods -->
+  <h2>Must-Try Foods</h2>
+  <ul>
+    <li><strong>Croissants</strong> – A buttery and flaky French breakfast pastry.</li>
+    <li><em>Baguette</em> – A classic French bread that’s crunchy outside and soft inside.</li>
+    <li><strong>Macarons</strong> – Colorful, delicate, and sweet treats.</li>
+    <li><em>Escargots</em> – A traditional French delicacy made with snails.</li>
+    <li><strong>Crêpes</strong> – Thin pancakes filled with either sweet or savory ingredients.</li>
+  </ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
